k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    app.kubernetes.io/managed-by: kustomize
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-monitoring
  labels:
    app.kubernetes.io/managed-by: kustomize
